# Xplore-BD

./: .gitignore  LICENSE  README.md  manifest.json  pyproject.toml  xplorebd_mcp.dxt
Xplore-env/: pyvenv.cfg
tests/: __init__.py  test_main.py
xplorebd/: __init__.py  bridge.py  cli.py  gene.py  literature.py  main.py  mcp_server.py
xplorebd/mcp/server/fastmcp/: __init__.py
